--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <h1>Odin recipes</h1>
         <ul>
-           <li><a href="recipes/lasagna.html" target="_blank">lasagna recipe</a></li>
-           <li><a href="recipes/stirfry.html" target="_blank">stirfry recipe</a></li>
+           <li><a href="recipes/lasagna.html" target="_blank" rel="noreferrer">lasagna recipe</a></li>
+           <li><a href="recipes/stirfry.html" target="_blank" rel="noreferrer">stirfry recipe</a></li>
         </ul>
         
     </body>
