--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Homestyle Lasagna</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F10%2F31%2FHomemade-Lasagna-lutzflcat-1x1-1-2000.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="picture of lasagna">
+        <img src="../images/Lasagna .webp" height="310" width="310" alt="picture of lasagna">
         <h3>Beautiful Lasagna recipe</h3>
         <p>This Lasagna is a family recipe that has been handed down through the generations.
             A luscious rague of minced Beef, silky pasta and depth throughout will leave you coming back
