--- a/recipes/stirfry.html
+++ b/recipes/stirfry.html
@@ -2,10 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Stirfry recipe</title>
+        <title>Asian stirfry recipe</title>
     </head>
 
     <body>
         <h1>Asian stirfry recipe</h1>
+        <img src="../images/Beef stirfry.webp" height="310" width="310" alt="picture of Beef stirfry">
+        <h3>Authentic asian stirfry recipe</h3>
+        <p>This simple yet delicious stirfry recipe is the perfect weeknight dinner.
+            strips of Beef, Bell peppers, Mushrooms and Pak choi all cooked wonderfully with the
+            aromatics of spring onion, Garlic and Ginger with a salty and savoury asian sauce 
+            will have you and the family coming back for seconds.
+        </p>
     </body>
 </html>
