I have added a new recipe page with image

--- a/recipes/stirfry.html
+++ b/recipes/stirfry.html
@@ -14,5 +14,29 @@
             aromatics of spring onion, Garlic and Ginger with a salty and savoury asian sauce 
             will have you and the family coming back for seconds.
         </p>
+        <p>For this recipe you will need the folowing.</p>
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>Beef strips</li>
+            <li>Garlic</li>
+            <li>Ginger</li>
+            <li>spring onion</li>
+            <li>Bell pepper</li>
+            <li>Mushrooms</li>
+            <li>Pak choi</li>
+            <li>Soy sauce</li>
+            <li>Dar soy sauce</li>
+            <li>Sesame oil</li>
+            <li>Oyster sauce</li>
+        </ul>
+        <h3>Steps:</h3>
+        <ol>
+            <li>Firstly marinate the Beef in a little soy and sesame oil and sear in a smoking hot pan or wok </li>
+            <li>Set aside the Beef and start by cooking the aromatics. Ginger, Garlic and Spring onion go in.</li>
+            <li>Then add the Bell peppers and Mushrooms followed by the Pak choi</li>
+            <li>Make a simple marinade of Soy sauce, dark soy, oyster sauce and Sesame oil</li>
+            <li>Lastly add the Beef back into the pan followed by the sauce to finish off cooking</li>
+        </ol>
+        <p>There we have it, an authentic Asian stir-fry. Serve with white rice for a tasty no fuss weeknight meal.</p>
     </body>
 </html>
