--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
            <li><a href="recipes/lasagna.html" target="_blank" rel="noreferrer">lasagna recipe</a></li>
            <li><a href="recipes/stirfry.html" target="_blank" rel="noreferrer">stirfry recipe</a></li>
+           <li><a href="recipes/sausagepasta.html" target="_blank" rel="noreferrer">Sausage pasta recipe</a></li>
         </ul>
         
     </body>
