--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Odin recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>Odin recipes</h1>
         <ul>
-           <li><a href="recipes/lasagna.html" target="_blank" rel="noreferrer">lasagna recipe</a></li>
-           <li><a href="recipes/stirfry.html" target="_blank" rel="noreferrer">stirfry recipe</a></li>
-           <li><a href="recipes/sausagepasta.html" target="_blank" rel="noreferrer">Sausage pasta recipe</a></li>
+           <li class="lasagna"><a href="recipes/lasagna.html" target="_blank" rel="noreferrer">lasagna recipe</a></li>
+           <li class="stirfry"><a href="recipes/stirfry.html" target="_blank" rel="noreferrer">stirfry recipe</a></li>
+           <li class="sausagepasta"><a href="recipes/sausagepasta.html" target="_blank" rel="noreferrer">Sausage pasta recipe</a></li>
         </ul>
         
     </body>
