I have consolidated stylle pages into a new directory as-well as css style Changes
The new css file containining style sheets will help to keep changes simple and organised

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,18 +3,22 @@
     <head>
         <meta charset="utf-8">
         <title>lasagna recipe</title>
+        <link rel="stylesheet" href="../style-sheets/lasagna.css">
     </head>
 
     <body>
         <h1>Homestyle Lasagna</h1>
-        <img src="../images/Lasagna .webp" height="310" width="310" alt="picture of lasagna">
+        <figure>
+            <img src="../images/Lasagna .webp" height="310" width="310" alt="picture of lasagna">
+            <figcaption>A new family<i> favourite</i></figcaption>
+        <figure>
         <h3>Beautiful Lasagna recipe</h3>
         <p>This Lasagna is a family recipe that has been handed down through the generations.
             A luscious rague of minced Beef, silky pasta and depth throughout will leave you coming back
             for yet another bite. A family favourite in our household abd gaurantee this will be yours too 
             once you have tried this.</p>
             <P>For this recipe you will need the following.</P>
-            <h3>Ingredients:</h3>
+            <h3 class="ingredients">Ingredients:</h3>
             <ul>
                 <li>Minced Beef</li>
                 <li>Diced Onion</li>
@@ -25,7 +29,7 @@
                 <li>Milk</li>
                 <li>Flour</li>
             </ul>
-            <h3>Steps:</h3>
+            <h3 class="steps">Steps:</h3>
             <ol>
                 <li>Start by sweating down the onions in a little oil and then brown off the minced Beef.</li>
                 <li>Add the tinned tomatoes and dried herbs and cook for a further 5 minutes.</li>
