--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Odin recipes</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style-sheets/style.css">
     </head>
 
     <body>
