Here I have modified the code to allow for css styling
Styling this page will make it more appealing

--- a/recipes/stirfry.html
+++ b/recipes/stirfry.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Asian stirfry recipe</title>
+        <link rel="stylesheet" href="../style-sheets/stirfry.css">
     </head>
 
     <body>
-        <h1>Asian stirfry recipe</h1>
+        <div>
+        <h1 id="title"> Asian stirfry recipe</h1>
         <img src="../images/Beef stirfry.webp" height="310" width="310" alt="picture of Beef stirfry">
         <h3>Authentic asian stirfry recipe</h3>
         <p>This simple yet delicious stirfry recipe is the perfect weeknight dinner.
@@ -15,8 +17,8 @@
             will have you and the family coming back for seconds.
         </p>
         <p>For this recipe you will need the folowing.</p>
-        <h3>Ingredients:</h3>
-        <ul>
+        <h3 class="ingredients"> Ingredients:</h3>
+        <ul class="ingredients list">
             <li>Beef strips</li>
             <li>Garlic</li>
             <li>Ginger</li>
@@ -29,8 +31,8 @@
             <li>Sesame oil</li>
             <li>Oyster sauce</li>
         </ul>
-        <h3>Steps:</h3>
-        <ol>
+        <h3 class="steps"> Steps:</h3>
+        <ol class="steps list">
             <li>Firstly marinate the Beef in a little soy and sesame oil and sear in a smoking hot pan or wok </li>
             <li>Set aside the Beef and start by cooking the aromatics. Ginger, Garlic and Spring onion go in.</li>
             <li>Then add the Bell peppers and Mushrooms followed by the Pak choi</li>
@@ -38,5 +40,6 @@
             <li>Lastly add the Beef back into the pan followed by the sauce to finish off cooking</li>
         </ol>
         <p>There we have it, an authentic Asian stir-fry. Serve with white rice for a tasty no fuss weeknight meal.</p>
+        </div>
     </body>
 </html>
