Here I have simply made a link for the external css file used for styling

--- a/recipes/sausagepasta.html
+++ b/recipes/sausagepasta.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Sausage pasta recipe</title>
+        <link rel="stylesheet" href="../style-sheets/sausagepasta.css">
     </head>
 
     <body>
         <h1>Sausage pasta</h1>
-        <img src="../images/sausagepasta.jpg" alt="picture of Sausage pasta" height="310" width="310">
-        <h3>Sausage and pasta, what is there not to love</h3>
+        <img id="peppers" src="../images/sausagepasta.jpg" alt="picture of Sausage pasta" height="310" width="310">
+        <h3 class="sausage">Sausage and pasta, what is there not to love</h3>
         <p>This quick and easy weeknight meal is one that the whole family will love,
             and you will find yourself making again and again
         </p>
