--- a/recipes/stirfry.html
+++ b/recipes/stirfry.html
@@ -9,7 +9,8 @@
     <body>
         <div>
         <h1 id="title"> Asian stirfry recipe</h1>
-        <img src="../images/Beef stirfry.webp" height="310" width="310" alt="picture of Beef stirfry">
+        <img src="../images/Beef stirfry.webp" height="400" width="400" alt="picture of Beef stirfry">
+        <img src="../images/wok guy.jpg" height="400" width="400" alt="picture of a guy holding a wok">
         <h3>Authentic asian stirfry recipe</h3>
         <p>This simple yet delicious stirfry recipe is the perfect weeknight dinner.
             strips of Beef, Bell peppers, Mushrooms and Pak choi all cooked wonderfully with the
