recipes/sausagepasta.html

--- a/recipes/sausagepasta.html
+++ b/recipes/sausagepasta.html
@@ -9,6 +9,7 @@
     <body>
         <h1>Sausage pasta</h1>
         <img id="peppers" src="../images/sausagepasta.jpg" alt="picture of Sausage pasta" height="310" width="310">
+        <img class="cumberland" src="../images/cumberland .jpeg" alt="picture of sausage" height="310" width="310">
         <h3 class="sausage">Sausage and pasta, what is there not to love</h3>
         <p>This quick and easy weeknight meal is one that the whole family will love,
             and you will find yourself making again and again
