--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -38,6 +38,12 @@
                 <li>lastly add more Cheese to the top and bake in an oven at 180c for 1 hour</li>
                 <li>Enjoy!!</li>
             </ol>
+            <fieldset>
+                <legend>What meat would you use for you're Lasagna?</legend>
+                <label for="beef"><input id="beef" type="radio" name="beef-veal-pork" value="beef" checked>Beef</label>
+                <label for="veal"><input id="veal" type="radio" name="beef-veal-pork" value="veal">Veal</label>
+                <label for="pork"><input id="pork" type="radio" name="beef-veal-pork" value="pork">Pork</label>
+            </fieldset>
 
     </body>
 </html>
