--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
            <li class="stirfry"><a href="recipes/stirfry.html" target="_blank" rel="noreferrer">stirfry recipe</a></li>
            <li class="sausagepasta"><a href="recipes/sausagepasta.html" target="_blank" rel="noreferrer">Sausage pasta recipe</a></li>
         </ul>
+        <figure>
         <img src="../odin-recipes/images/family dinner.jpg" alt="picture of family meal" height="310" width="400">
-        
+        <figcaption>A family meal to heal the<i> soul</i> for all</figcaption>
+        </figure>
     </body>
 </html>
