--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <h1>Odin recipes</h1>
         <ul>
-           <li class="lasagna"><a href="recipes/lasagna.html" target="_blank" rel="noreferrer">lasagna recipe</a></li>
-           <li class="stirfry"><a href="recipes/stirfry.html" target="_blank" rel="noreferrer">stirfry recipe</a></li>
+           <li class="lasagna"><a href="recipes/lasagna.html" target="_blank" rel="noreferrer">Lasagna recipe</a></li>
+           <li class="stirfry"><a href="recipes/stirfry.html" target="_blank" rel="noreferrer">Stir-fry recipe</a></li>
            <li class="sausagepasta"><a href="recipes/sausagepasta.html" target="_blank" rel="noreferrer">Sausage pasta recipe</a></li>
         </ul>
         <figure>
