--- a/recipes/stirfry.html
+++ b/recipes/stirfry.html
@@ -2,17 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Asian stirfry recipe</title>
+        <title>Asian stir-fry recipe</title>
         <link rel="stylesheet" href="../style-sheets/stirfry.css">
     </head>
 
     <body>
         <div>
-        <h1 id="title"> Asian stirfry recipe</h1>
+        <h1 id="title"> Asian stir-fry recipe</h1>
         <img src="../images/Beef stirfry.webp" height="400" width="400" alt="picture of Beef stirfry">
         <img src="../images/wok guy.jpg" height="400" width="400" alt="picture of a guy holding a wok">
-        <h3>Authentic asian stirfry recipe</h3>
-        <p>This simple yet delicious stirfry recipe is the perfect weeknight dinner.
+        <h3>Authentic asian stir-fry recipe</h3>
+        <p>This simple yet delicious stir-fry recipe is the perfect weeknight dinner.
             strips of Beef, Bell peppers, Mushrooms and Pak choi all cooked wonderfully with the
             aromatics of spring onion, Garlic and Ginger with a salty and savoury asian sauce 
             will have you and the family coming back for seconds.
