--- a/recipes/stirfry.html
+++ b/recipes/stirfry.html
@@ -15,7 +15,7 @@
         <p>This simple yet delicious stir-fry recipe is the perfect weeknight dinner.
             strips of Beef, Bell peppers, Mushrooms and Pak choi all cooked wonderfully with the
             aromatics of spring onion, Garlic and Ginger with a salty and savoury asian sauce 
-            will have you and the family coming back for seconds.
+            <span>will have you and the family coming back for seconds.</span>
         </p>
         <p>For this recipe you will need the folowing.</p>
         <h3 class="ingredients"> Ingredients:</h3>
