--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     </head>
 
     <body>
+        <div class="heading-box">
         <h1>Odin recipes</h1>
+        </div>
+        <div class="link-box">
         <ul>
            <li class="lasagna"><a href="recipes/lasagna.html" target="_blank" rel="noreferrer">Lasagna recipe</a></li>
            <li class="stirfry"><a href="recipes/stirfry.html" target="_blank" rel="noreferrer">Stir-fry recipe</a></li>
            <li class="sausagepasta"><a href="recipes/sausagepasta.html" target="_blank" rel="noreferrer">Sausage pasta recipe</a></li>
         </ul>
+        </div>
         <figure>
         <img src="../odin-recipes/images/family dinner.jpg" alt="picture of family meal" height="310" width="400">
         <figcaption>A family meal to heal the<i> soul</i> for all</figcaption>
