--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <div class="heading-box">
         <h1>Odin recipes</h1>
         </div>
+        <div class="suggest-box">
+            <h2>What are you're favourite recipes?</h2>
+        </div>
         <div class="link-box">
         <ul>
            <li class="lasagna"><a href="recipes/lasagna.html" target="_blank" rel="noreferrer">Lasagna recipe</a></li>
