--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
     </head>
 
     <body>
+        <div class="top">
         <div class="heading-box">
         <h1>Odin recipes</h1>
         </div>
         <div class="suggest-box">
             <h2>What are you're favourite recipes?</h2>
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+        </div>
         </div>
         <div class="link-box">
         <ul>
